code source からの lib/scripts 上方向探索を CodeSourceLocator に共通化する
OpenjdkSourceTracer の findNativeSrcDir/findBundledSrcZip と Main.resolveScriptDir を置換。
Main.resolveLibDir は「lib 不在でも scripts があれば dir/lib を返す」分岐が階層ごとに
交互評価されるため findUpward では挙動等価にできず、計画書の指示どおり置換を見送った。

Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_017RwVu7aJ9TFiShTh6vUzUX